--- a/styles/css/vtex.flex-layout.css
+++ b/styles/css/vtex.flex-layout.css
@@ -109,6 +109,11 @@
     margin-left: auto;
     margin-right: auto;
   }
+  .flexRowContent--flex-row-azienda-title {
+    max-width: 1400px;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
 
 @media only screen and (max-width: 1600px) {
@@ -243,6 +248,11 @@
     margin-left: auto;
     margin-right: auto;
   }
+  .flexRowContent--flex-row-azienda-title {
+    max-width: 1250px;
+    margin-left: auto;
+    margin-right: auto;
+  }
 
 }
 
@@ -361,6 +371,11 @@
     margin-right: auto;
   }
   .flexRowContent--flex-row-azienda {
+    max-width: 1025px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .flexRowContent--flex-row-azienda-title {
     max-width: 1025px;
     margin-left: auto;
     margin-right: auto;
@@ -1872,6 +1887,13 @@
   margin-right: auto;
   margin-bottom: 72px;
 }
+
+.flexRow--flex-row-azienda-title :global(.vtex-store-components-3-x-container) {
+  max-width: 1400px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 
 :global(.vtex-flex-layout-0-x-flexColChild--flex-col-faq) {
   margin-right: 20px;
@@ -3444,4 +3466,39 @@
 .flexCol--updated-bambinoMenuDesktopThirdColumn {
   padding-left: 1rem;
   padding-right: 1rem;
+}
+
+:global(.vtex-flex-layout-0-x-flexRow--flex-row-slider-template) {
+  width: 100%;
+  height: 100%;
+}
+
+:global(.vtex-flex-layout-0-x-flexRowContent--flex-row-template-page) {
+  margin-top: 65px;
+}
+
+:global(.vtex-flex-layout-0-x-flexRowContent--newslwtter-banner-template-mobile) {
+  margin-bottom: 58px;
+}
+
+:global(.vtex-flex-layout-0-x-flexRowContent--flex-row-all-static-pages-brand) {
+  background-color: #edecec;
+  height: 876px;
+}
+:global(.vtex-flex-layout-0-x-flexRowContent--chiSiamo) {
+  flex-direction: column;
+}
+
+
+:global(.vtex-flex-layout-0-x-flexCol--flex-col-brand-card2-mobile) {
+  margin-bottom: 147px;
+}
+
+:global(.vtex-flex-layout-0-x-flexCol--flex-col-brand-card1-mobile) {
+  margin-top: 68px;
+  margin-bottom: 1px;
+}
+
+:global(.vtex-flex-layout-0-x-flexRowContent--brand-info-cards-mobile) {
+  background-color: #edecec;
 }
