--- a/styles/css/vtex.flex-layout.css
+++ b/styles/css/vtex.flex-layout.css
@@ -104,6 +104,14 @@
     margin-left: auto;
     margin-right: auto;
   }
+
+  .flexRow--flex-row-all-static-pages-brand,
+  .flexRow--flex-row-all-static-pages {
+    max-width: 1400px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
   .flexRowContent--flex-row-azienda {
     max-width: 1400px;
     margin-left: auto;
@@ -233,7 +241,8 @@
     width: 100%;
     height: 100%;
   }
-  .flexRow--flex-row-all-static-pages {
+  .flexRow--flex-row-all-static-pages,
+  .flexRow--flex-row-all-static-pages-brand{
     max-width: 1250px;
     margin-left: auto;
     margin-right: auto;
@@ -360,7 +369,8 @@
     margin-right: auto;
   }
 
-  .flexRow--flex-row-all-static-pages {
+  .flexRow--flex-row-all-static-pages,
+  .flexRow--flex-row-all-static-pages-brand {
     max-width: 1025px;
     margin-left: auto;
     margin-right: auto;
